; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/tulip/extr_de2104x.c_de_alloc_rings.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/tulip/extr_de2104x.c_de_alloc_rings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.de_private = type { i32*, i32*, i32, i32 }

@DE_RING_BYTES = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@DE_RX_RING_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.de_private*)* @de_alloc_rings to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @de_alloc_rings(%struct.de_private* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.de_private*, align 8
  store %struct.de_private* %0, %struct.de_private** %3, align 8
  %4 = load %struct.de_private*, %struct.de_private** %3, align 8
  %5 = getelementptr inbounds %struct.de_private, %struct.de_private* %4, i32 0, i32 3
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @DE_RING_BYTES, align 4
  %8 = load %struct.de_private*, %struct.de_private** %3, align 8
  %9 = getelementptr inbounds %struct.de_private, %struct.de_private* %8, i32 0, i32 2
  %10 = call i32* @pci_alloc_consistent(i32 %6, i32 %7, i32* %9)
  %11 = load %struct.de_private*, %struct.de_private** %3, align 8
  %12 = getelementptr inbounds %struct.de_private, %struct.de_private* %11, i32 0, i32 0
  store i32* %10, i32** %12, align 8
  %13 = load %struct.de_private*, %struct.de_private** %3, align 8
  %14 = getelementptr inbounds %struct.de_private, %struct.de_private* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %1
  %18 = load i32, i32* @ENOMEM, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %2, align 4
  br label %30

20:                                               ; preds = %1
  %21 = load %struct.de_private*, %struct.de_private** %3, align 8
  %22 = getelementptr inbounds %struct.de_private, %struct.de_private* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = load i64, i64* @DE_RX_RING_SIZE, align 8
  %25 = getelementptr inbounds i32, i32* %23, i64 %24
  %26 = load %struct.de_private*, %struct.de_private** %3, align 8
  %27 = getelementptr inbounds %struct.de_private, %struct.de_private* %26, i32 0, i32 1
  store i32* %25, i32** %27, align 8
  %28 = load %struct.de_private*, %struct.de_private** %3, align 8
  %29 = call i32 @de_init_rings(%struct.de_private* %28)
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %20, %17
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32* @pci_alloc_consistent(i32, i32, i32*) #1

declare dso_local i32 @de_init_rings(%struct.de_private*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
